fix: Gradle 8.5 다운그레이드, Java 17 호환성 수정 (getFirst -> get(0)), @Modifying 추가